# simp-db

./: CMakeLists.txt  README.md  README_LINUX.MD  README_WINDOWS.MD
include/: help_menu.hpp
include/comp/: init.hpp
include/eval/: eval.hpp
include/hash/: hash_tool.hpp
include/server/: server.hpp
src/: help_menu.cpp  main.cpp
src/comp/: init.cpp
src/eval/: eval.cpp
src/hash/: hash_tool.cpp
src/server/: server.cpp
